--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="search_word">Search Word</string>
     <string name="search">Search</string>
     <string name="search_word_is_empty">Search word is empty.</string>
+    <string name="could_not_get_the_results">Could not get the results.</string>
 </resources>
