--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search">Search</string>
     <string name="search_word_is_empty">Search word is empty.</string>
     <string name="could_not_get_the_results">Could not get the results.</string>
+    <string name="failed_to_retrieve_the_information">Failed to retrieve the information.</string>
 </resources>
