--- a/README
+++ b/README
@@ -7,3 +7,6 @@ This software uses the following libraries and icons.
 
 * Open Icon Library
     http://openiconlibrary.sourceforge.net/
+
+* SyntaxHighlighter
+    http://alexgorbatchev.com/SyntaxHighlighter/
