--- a/README
+++ b/README
@@ -8,5 +8,5 @@ This software uses the following libraries and icons.
 * Open Icon Library
     http://openiconlibrary.sourceforge.net/
 
-* SyntaxHighlighter
-    http://alexgorbatchev.com/SyntaxHighlighter/
+* google-code-prettify
+    http://code.google.com/p/google-code-prettify/
