--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="owner_name">Owner / Name</string>
     <string name="description">Description</string>
     <string name="homepage">Homepage</string>
-    <string name="select_branche">Select Branche</string>
-    <string name="select_tag">Select Tag</string>
+    <string name="branches">Branches</string>
+    <string name="tags">Tags</string>
+    <string name="would_you_like_to_which">Would you like to which?</string>
+    <string name="tree_list">Tree List</string>
 </resources>
