bookmark追加用のレイアウトを作成

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,4 +26,10 @@
     </string-array>
     <string name="added_to_your_bookmarks">Added to your bookmarks.</string>
     <string name="failed_to_add_a_bookmark">Failed to add a bookmark.</string>
+    <string name="name">Name</string>
+    <string name="owner">Owner</string>
+    <string name="tree">Tree</string>
+    <string name="note">Note</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
 </resources>
