リファクタリング

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="would_you_like_to_which">Would you like to which?</string>
     <string name="tree_list">Tree List</string>
     <string name="initializing">Initializing</string>
-    <string-array name="bookmark_menu_dialog">
+    <string-array name="blobs_menu_dialog">
         <item>Add Bookmark</item>
         <item>Bookmark now</item>
     </string-array>
