ライセンス変更

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Copyright 2011 Naruse Motoki
-Licensed under the GPL.
+Licensed under the Apache License 2.0.
 
 This software uses the following libraries and icons.
 * ghapi
