--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="downloading">Downloading</string>
     <string name="could_not_load_external_memory">Could not load external memory.</string>
     <string name="could_not_write_to_external_memory">Could not write to external memory.</string>
+    <string name="download_failed">Download failed.</string>
 </resources>
