--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="download_failed">Download failed.</string>
     <string name="keyword_search">Keyword Search</string>
     <string name="option_language_example">Option Language (C Java ...)</string>
+    <string name="username">Username</string>
 </resources>
