CSSの追加と更新

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -62,11 +62,13 @@
         <item>default</item>
         <item>desert</item>
         <item>sunburst</item>
+        <item>sons-of-obsidian</item>
     </string-array>
     <string-array name="code_theme_values">
         <item>default</item>
         <item>desert</item>
         <item>sunburst</item>
+        <item>sons-of-obsidian</item>
     </string-array>
 
     <string name="start_download">Start download</string>
